sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:7: error: ')' expected but ';' found.
    	if (!(plusPetit(i;i+1))) {
                         ^AlgCocktailSort1:7: error: ';' expected but ')' found.
    	if (!(plusPetit(i;i+1))) {
                             ^